--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "1.0.7",
   "description": "Card shoe of Table based games with 52 cards.",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
     "test": "mocha"
   },
